<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".navigation">

    <FrameLayout
        android:id="@+id/area_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/overview_button"
        app:layout_constraintEnd_toStartOf="@+id/east_button"
        app:layout_constraintStart_toEndOf="@+id/west_button"
        app:layout_constraintTop_toBottomOf="@+id/north_button" />

    <FrameLayout
        android:id="@+id/status_fragment"
        android:layout_width="0dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@+id/south_button"
        app:layout_constraintEnd_toStartOf="@+id/east_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/west_button">

    </FrameLayout>


    <Button
        android:id="@+id/north_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/north"/>

    <Button
        android:id="@+id/west_button"
        android:layout_width="50dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/south_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/north_button"
        android:text="@string/west"/>

    <Button
        android:id="@+id/south_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/south"/>

    <Button
        android:id="@+id/east_button"
        android:layout_width="50dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/south_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/north_button"
        android:text="@string/east"/>

    <Button
        android:id="@+id/overview_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/option_button"
        app:layout_constraintEnd_toStartOf="@+id/east_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/west_button"
        android:text="@string/overviewButton"/>

    <Button
        android:id="@+id/option_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/status_fragment"
        app:layout_constraintEnd_toStartOf="@+id/east_button"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/west_button"
        android:text="@string/optionButton"/>


</android.support.constraint.ConstraintLayout>